CAD-1127 IT test fix 3